feat: restore v25 from v14
Restored project files and configurations from previous version.

#VERCEL_SKIP

Co-authored-by: null <150354938+Moizdev-ops@users.noreply.github.com>